--- a/ProjSite/Index.html
+++ b/ProjSite/Index.html
@@ -8,5 +8,6 @@
     <body>
         <h1>Hello World!</h1>
         <p> Coursera Project 1.</p>
+        <p>HTML5,CSS,JAVASCRIPT</p>
     </body>
 </html>
