--- a/module2_solution/module2_index.html
+++ b/module2_solution/module2_index.html
@@ -2,7 +2,7 @@
 <html>
     <head>
         <title>Module-2</title>
-        <link rel="stylesheet" href="Module2_Stylesheet.css">
+        <link rel="stylesheet" href="module2_Stylesheet.css">
         <meta charset="utf-8">
         <meta name="viewport" content="width=device-width, initial-scale=1">
     </head>
